Fixed the extra padding around the Apply button for Ongoing type funding items

--- a/doca_theme/src/sass/components/group/_group.scss
+++ b/doca_theme/src/sass/components/group/_group.scss
@@ -42,9 +42,6 @@
         margin-bottom: 50px;
         margin-top: 50px;
       }
-      &.ongoing {
-        margin: 0;
-      }
     }
   }
 }
